Removed some exception wrapping by rewriting functions in URLHelper